[package]
authors = ["ArcticLampyrid <ArcticLampyrid@outlook.com>"]
categories = ["network-programming"]
description = "A library for building simple ipp servers"
documentation = "https://docs.rs/ippper"
edition = "2018"
keywords = ["ipp-server", "ipp", "print"]
license = "BSD-3-Clause"
name = "ippper"
readme = "README.md"
repository = "https://github.com/ArcticLampyrid/ippper.rs/"
version = "0.3.0"

[dependencies]
anyhow = "1"
async-compression = {version = "0.3", features = ["futures-io", "gzip"]}
async-trait = "0.1.57"
derive_builder = "0.11"
futures = "0.3.17"
hyper = {version = "0.14", features = ["http1", "server", "stream"]}
ipp = "3"
num-traits = "0.2.14"
thiserror = "1.0"
tokio = {version = "1", features = ["rt-multi-thread", "macros"]}
tokio-util = {version = "0.7", features = ["io", "compat"]}
uuid = "1"

[[example]]
name = "save_as_pdf"
