[package]
authors = ["ArcticLampyrid <ArcticLampyrid@outlook.com>"]
categories = ["network-programming"]
description = "A library for building simple ipp servers"
documentation = "https://docs.rs/ippper"
edition = "2021"
keywords = ["ipp-server", "ipp", "print"]
license = "BSD-3-Clause"
name = "ippper"
readme = "README.md"
repository = "https://github.com/ArcticLampyrid/ippper.rs/"
version = "0.3.0"

[features]
default = ["server", "server-tls", "rustls-aws-lc-rs"]
server = ["dep:hyper", "dep:hyper-util", "dep:tokio"]
server-tls = ["server", "dep:tokio-rustls", "dep:rustls-pemfile"]
rustls-aws-lc-rs = ["tokio-rustls?/aws-lc-rs"]
rustls-ring = ["tokio-rustls?/ring"]

[dependencies]
tokio-rustls = { version = "0.26", optional = true, default-features = false, features = [
    "logging",
    "tls12",
] }
log = "0.4"
anyhow = "1"
async-compression = { version = "0.4", features = [
    "futures-io",
    "gzip",
], default-features = false }
derive_builder = "0.20"
fmt-derive = "0.1"
futures = "0.3"
hyper = { version = "1.2", features = [
    "http1",
    "http2",
    "server",
], optional = true }
hyper-util = { version = "0.1", features = [
    "http1",
    "http2",
    "server",
    "server-auto",
    "tokio",
], optional = true }
http = "1"
http-body = "1"
http-body-util = "0.1"
bytes = "1"
ipp = { version = "5", features = ["async"], default-features = false }
num-traits = "0.2"
thiserror = "1.0"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
], default-features = false, optional = true }
tokio-util = { version = "0.7", features = [
    "io",
    "compat",
], default-features = false }
uuid = "1"
rustls-pemfile = { version = "2.1", optional = true }

[[example]]
name = "save_as_pdf"
required-features = ["server-tls", "tokio/fs", "rustls-aws-lc-rs"]
